--- a/workspaces/client/tsconfig.json
+++ b/workspaces/client/tsconfig.json
@@ -21,6 +21,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@components/*": ["./src/app/components/*"],
+      "@context/*": ["./src/app/context/*"],
       "@public/*": ["./public/*"]
     }
   },
