CLIENT - Add profile page when logged

--- a/workspaces/client/tsconfig.json
+++ b/workspaces/client/tsconfig.json
@@ -22,7 +22,8 @@
       "@/*": ["./src/*"],
       "@components/*": ["./src/app/components/*"],
       "@context/*": ["./src/app/context/*"],
-      "@public/*": ["./public/*"]
+      "@public/*": ["./public/*"],
+      "@types/*": ["./src/app/types/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
