CLIENT / SERVER - handle refresh token

--- a/workspaces/client/tsconfig.json
+++ b/workspaces/client/tsconfig.json
@@ -22,6 +22,7 @@
       "@/*": ["./src/*"],
       "@components/*": ["./src/app/components/*"],
       "@context/*": ["./src/app/context/*"],
+      "@lib/*": ["./src/app/lib/*"],
       "@public/*": ["./public/*"],
       "@types/*": ["./src/app/types/*"]
     }
