--- a/workspaces/server/package.json
+++ b/workspaces/server/package.json
@@ -18,6 +18,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "mongoose": "^8.14.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
