--- a/workspaces/server/package.json
+++ b/workspaces/server/package.json
@@ -9,6 +9,7 @@
     "start:prod": "node dist/main"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -20,6 +21,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "mongoose": "^8.14.0",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
