--- a/workspaces/client/package.json
+++ b/workspaces/client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start:dev": "next dev -p 3033",
     "start:prod": "next build && next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sitemap": "next-sitemap"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -14,6 +15,7 @@
     "@mui/material": "^7.0.2",
     "axios": "^1.9.0",
     "next": "15.3.1",
+    "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
