--- a/workspaces/client/package.json
+++ b/workspaces/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
     "axios": "^1.9.0",
+    "lucide-react": "^0.522.0",
     "next": "15.3.1",
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
