--- a/workspaces/client/package.json
+++ b/workspaces/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "framer-motion": "^12.19.2",
     "lucide-react": "^0.522.0",
+    "marked": "^16.0.0",
     "next": "15.3.1",
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
