--- a/workspaces/client/package.json
+++ b/workspaces/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
+    "@next/third-parties": "^15.3.5",
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.9.0",
     "framer-motion": "^12.19.2",
