--- a/workspaces/client/package.json
+++ b/workspaces/client/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.9.0",
     "framer-motion": "^12.19.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.522.0",
     "marked": "^16.0.0",
     "next": "15.3.1",
